fix: wrap overview in this own div container

--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,11 @@
   margin-bottom: 20px;
 }
 
-.global,
-.overview {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
+@media screen and (min-width: 900px) {
+  .global,
+  .overview .content {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+  }
 }
